Garantir um menu simples e consistente

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,11 +1,6 @@
-<div class="dv-nav__brand"><a href="/dataview/">DataView</a></div>
-<div class="dv-nav__sections">
-<div class="dv-nav__section">
-<div class="dv-nav__section-title">Analysis</div>
-<ul class="dv-nav__list">
-<li class="dv-nav__item"><a href="/dataview/reports/micro-analysis/">Micro Analysis</a></li>
-<li class="dv-nav__item"><a href="/dataview/reports/raw-views/">Raw Views</a></li>
-</ul>
-</div>
-</div>
-<div class="dv-nav__meta">Updated: 2025-12-13 02:33 UTC</div>
+<nav style="padding:12px;border-bottom:1px solid #ddd;margin-bottom:16px;font-family:system-ui, -apple-system, Segoe UI, Roboto, Arial;">
+  <a href="./index.html">Home</a> |
+  <a href="./reports/raw-views/index.html">Raw Views</a> |
+  <a href="./reports/raw-views/report.html">Raw Views (Report)</a> |
+  <a href="./reports/micro-analysis/index.html">Micro Analysis</a>
+</nav>
